--- a/service-oa/pom.xml
+++ b/service-oa/pom.xml
@@ -40,7 +40,11 @@
             <artifactId>velocity-engine-core</artifactId>
             <version>2.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.zhuang</groupId>
+            <artifactId>spring-security</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
